--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@material2-extra/calendar": "0.1.1",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
     "angular-calendar": "0.21.2",
     "core-js": "^2.4.1",
+    "moment": "2.18.1",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
