--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
     "angular-calendar": "0.21.2",
     "core-js": "^2.4.1",
+    "libhdate": "0.3.2",
     "moment": "2.18.1",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
