--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.4.1",
     "libhdate": "0.3.2",
     "moment": "2.18.1",
+    "npm": "5.5.1",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
