--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "libhdate": "0.3.2",
     "moment": "2.18.1",
     "npm": "5.5.1",
+    "passport": "0.4.0",
+    "passport-saml": "0.31.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
