--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "@material2-extra/calendar": "0.1.1",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
     "angular-calendar": "0.21.2",
-    "core-js": "^2.4.1",
+    "core-js": "2.5.1",
     "libhdate": "0.3.2",
     "moment": "2.18.1",
     "npm": "5.5.1",
     "passport": "0.4.0",
     "passport-saml": "0.31.0",
     "rxjs": "^5.4.2",
+    "web-animations-js": "2.3.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
